Add more WebVR layout tests and fix small issues they found

Adds several additional WebVR layout tests.

Refactors the WebVR Mojo mocking to more closely emulate the actual
actual implementation.

Fixes several issues in the WebVR source code that were encountered by these
tests.

BUG=679952,679288

Review-Url: https://codereview.chromium.org/2624263003
Cr-Commit-Position: refs/heads/master@{#443485}

Former-commit-id: b7f90cae827044cfb2280c8382d993848ef33340